# projects

./: .replit  Anjala_day_2_chalange.py  Day _4_RockPaperScissors.py  Day_2_BMI_calculator.py  Day_2_week_left_in_life_challange.py  Day_3_BMI_calculator_ifelse.py  Day_3_LeapYear_chalange.py  Day_3_ifelse_checkOddEven.py  Day_3_leapyear_trueFalse.py  Day_3_loveCalculator.py  Day_3_pizzaorder_challange.py  Day_3_rollerCoster_challange.py  Day_4_ListIndexMap.py  Day_4_Random_headTail.py  Day_4_whoWillPayTheBill.py  README.md  TypesOfErrorInPython.txt  day_1_DataType.py  day_2_List.py  day_2_tipCalculator.py  day_3_treasureIsland.py  module.py  print23.py  pyproject.toml  test1.txt  test_practice.py  try.txt  try2.txt
Code with harry/: 01_hello.py  Day_2_chap_5.py  Day_3_chap_5.py  Day_7_practice.py  day_1_chap_1.py  day_1_chap_3.py  day_1_chap_4.py  day_2_prac_chap_5.py  day_3_chap_6.py  day_3_chap_6_pr3.py  day_8_chap_7.py  input.py  reversr_sort.py
GRK@ganesh/: Slicing concept.txt  accountNumberGerator.py  try.py
