[tool.poetry]
name = "repl_python3_projects-1"
version = "0.1.0"
description = ""
authors = ["PrateekVerma2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.2"
Flask = "^2.0.2"
pandas = "^1.3.3"
playsound = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
